# gdi-app

./: App.cpp  App.hpp  CMakeLists.txt  books.txt  data  main.cpp
headers/: stdafx.h
headers/GDI/: GDIPlusManager.hpp
headers/gui/: ProgressBar.hpp  buttons.hpp
headers/gui/mics/: rectCorner.hpp
headers/gui/windows/: infoBox.hpp  input.hpp  window.hpp
headers/mics/: BitmapHelper.hpp  Books.hpp  FileTXT.hpp  Keyboard.hpp  Mouse.hpp  enumlist.h  exception.hpp  helper.hpp  query.hpp  virtualClass.hpp
sourse/GDI/: GDIPlusManager.cpp
sourse/gui/: ProgressBar.cpp  buttons.cpp
sourse/gui/mics/: rectCorner.cpp
sourse/gui/windows/: infoBox.cpp  input.cpp  window.cpp
sourse/mics/: BitmapHelper.cpp  Books.cpp  FileTXT.cpp  Keyboard.cpp  Mouse.cpp  exception.cpp  helper.cpp  query.cpp  virtualClass.cpp
